--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
 body
 {
-    color: rebeccapurple;
+    color: green;
     text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 
