Agregado al adicional Final del Blog

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,6 +2,6 @@ body
 {
     color: green;
     text-align: center;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif, Geneva, Tahoma, sans-serif;
 
 }
